# Ocaml-work-for-course

./: .gitignore  Makefile  README.md  assemble-and-run.sh
peer/module1/cigrid/: ast.ml  cigrid  cigrid.ml  examples.cpp  parser.mly  test.cpp
peer/module1/stack/: Makefile  stack  stack.ml
peer/module2/asm/: Makefile  main-asm  main-asm.asm
peer/module2/cigrid/: Makefile  asm.ml  ast.mli  cfg.ml  cigrid_mod2.ml  lexer.mll  parser.mly  pprinter.ml  semantics.ml
solutions/cigrid/: AsmIr.ml  IR.ml  IRgen.ml  Makefile  a.asm  a.out  a.txt  ast.ml  cigrid  cigrid.ml  examples.cpp  examples.txt  helper.ml  instrSelection.ml  l.txt  l.txt[A  lexer.mll  liveness.ml  namecheck.ml  parser.conflicts  parser.mly  stack.ml  test.cpp  test.s  test.txt  token.ml  typecheck.ml
solutions/hello/: hello.ml
solutions/module0/binarytree/: Makefile  binarytree.ml
solutions/module0/primes/: Makefile  primegen.ml  primeprint.ml  primes  primes.ml
solutions/module1/stack/: Makefile  lexeri.ml  stack  stack.ml  (+1 more)
template-projects/asm/: .gitignore  main-asm.asm
template-projects/c/: .gitignore  Makefile  README.md
template-projects/c++/: .gitignore  Makefile  README.md
template-projects/haskell/: .gitignore  Makefile  README.md  app.cabal  stack.yaml
template-projects/java/: .gitignore  Makefile  README.md  pom.xml
template-projects/ocaml/: Makefile
template-projects/ocaml-dune/: .gitignore  Makefile  README.md  dune-project
template-projects/rust/: .gitignore  Cargo.toml  Makefile  README.md
template-projects/scala/: .gitignore  Makefile  README.md  hello.scala
(+26 files in other folders)
